<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_chair"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/chair"
                android:padding="10dp"
                android:src="@drawable/silla"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_item"
                app:layout_constraintStart_toEndOf="@+id/img_chair"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/description_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_item"
                app:layout_constraintStart_toEndOf="@+id/img_chair"
                app:layout_constraintTop_toBottomOf="@+id/title_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>